# skill-cortex-server

./: .gitignore  README.md  pyproject.toml
skill_cortex/: __init__.py  server.py  skill_manager.py
